cambio de titutlo lista de cursos DevOps

--- a/Luigi/index.html
+++ b/Luigi/index.html
@@ -2,8 +2,8 @@
 <html lang = "en">
 <head>
      <meta charset = "UTF-8">
-     <title> "Cursos de DevOps de Alura"</title>
-</head>
+     <title> "Lista de Cursos de DevOps de Alura"</title>
+</head> 
 <body>
      <ul>
          <li> Vagrant. </li>
