--- a/Luigi/index.html
+++ b/Luigi/index.html
@@ -7,9 +7,9 @@
 <body>
      <ul>
          <li> Vagrant. </li>
-         <li> Docker. </li>
+         <li> Docker: Creando containers sin dolor de cabeza</li>
          <li> Ansible. </li>
-         <li> Integración continua. </li>
+         <li>Integración continua:Productividad en el desarrollo de software</li>
      </ul>
 </body>
 </html>
