--- a/Luigi/index.html
+++ b/Luigi/index.html
@@ -6,11 +6,11 @@
 </head> 
 <body>
      <ul>
-         <li> Vagrant. </li>
+         <li> Vagrant: Gerenciando maquinas virtuales</li>
          <li> Docker: Creando containers sin dolor de cabeza</li>
-         <li> Ansible. </li>
-         <li>Integración continua:Productividad en el desarrollo de software</li>
-         <li>kubernetes: Introducción a la orquestación de conteiners</li>
+         <li> Ansible: Su infraestructura como código</li>
+         <li> Integración continua:Productividad en el desarrollo de software</li>
+         <li> kubernetes: Introducción a la orquestación de conteiners</li>
      </ul>
 </body>
 </html>
